infrastructure/k8s/apps/barista.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barista
  namespace: coffeeshop
  labels:
    app: barista
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barista
  template:
    metadata:
      labels:
        app: barista
    spec:
      containers:
        - name: barista
          image: 423623841278.dkr.ecr.ap-southeast-1.amazonaws.com/go-coffeeshop-barista:19d08f70d1df94c0e87e932ecb7c4845087e93c9
          imagePullPolicy: IfNotPresent
