infrastructure/k8s/apps/kitchen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen
  namespace: coffeeshop
  labels:
    app: kitchen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchen
  template:
    metadata:
      labels:
        app: kitchen
    spec:
      containers:
        - name: kitchen
          image: 423623841278.dkr.ecr.ap-southeast-1.amazonaws.com/go-coffeeshop-kitchen:19d08f70d1df94c0e87e932ecb7c4845087e93c9
          imagePullPolicy: IfNotPresent
