infrastructure/k8s/apps/counter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  namespace: coffeeshop
  labels:
    app: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: counter
          image: go-coffeeshop-counter:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
              name: http-grpc

---
apiVersion: v1
kind: Service
metadata:
  name: counter
  namespace: coffeeshop
spec:
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    app: counter
