infrastructure/k8s/apps/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: coffeeshop
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: 423623841278.dkr.ecr.ap-southeast-1.amazonaws.com/go-coffeeshop-product:9de6d85f9541b747b716c9154b48474f7d4885f7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
              name: grpc

---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: coffeeshop
spec:
  ports:
    - port: 5001
      targetPort: 5001
  selector:
    app: product
