infrastructure/k8s/apps/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: coffeeshop
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - name: proxy
          image: 423623841278.dkr.ecr.ap-southeast-1.amazonaws.com/go-coffeeshop-proxy:9de6d85f9541b747b716c9154b48474f7d4885f7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: proxy-port

---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: coffeeshop
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: proxy
