infrastructure/k8s/apps/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: coffeeshop
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 423623841278.dkr.ecr.ap-southeast-1.amazonaws.com/go-coffeeshop-web:bef39cfbbc4badb56ff0c62168c778d79f4dc8a6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: web-port

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: coffeeshop
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: web
